--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,7 @@ a:link, a:visited {
   float: right;
   text-decoration: none;
   background-image: none;
-  color: $base;
+  //color: $base;
 }
 
 a:hover {
@@ -25,6 +25,7 @@ a:hover {
 }
 
 a {
+  color: $base;
   text-shadow: none;
 }
 
@@ -88,7 +89,7 @@ h1 {
 .container a {
   float: none !important;
   display: inherit;
-  color: $primary !important;
+  //color: $primary !important;
   margin-left: 0;
 }
 
@@ -193,26 +194,4 @@ hr {
   background: $secondary;
   border: none;
   height: 1px;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 1rem;
-}
-
-.wrapper .portfolio-item {
-  position: relative;
-  overflow: hidden;
-  text-align: center;
-  font-size: 2rem;
-  opacity: 0.9;
-}
-
-.wrapper .portfolio-item:hover {
-  opacity: 1 !important;
-}
-
-.wrapper .portfolio-item a {
-  color: $base !important;
 }
